Refactor projektu: pakiety + stuktura